--- a/index.html
+++ b/index.html
@@ -52,28 +52,7 @@
                   <h1>Iceland - The element <br> of nature</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni excepturi, maxime, quasi harum dolorum facilis iusto in odio placeat expedita maiores aspernatur delectus. Id et, quos ab illo laboriosam reiciendis?</p>
                   <button>EXPLORE</button>
-            </div>
-            <div class="bottom-bar">
-                  <div class="container">
-                        <div class="row">
-                              <div class="col-lg-4">
-                                    <h6>Lorem ipsum dolor sit.</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque veniam labore repellendus necessitatibus ipsa!</p>
-                              </div>
-                              <div class="col-lg-4">
-                                    <h6>Lorem ipsum dolor sit.</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque veniam labore repellendus necessitatibus ipsa!</p>
-                              </div>
-                              <div class="col-lg-4">
-                                    <h6>Lorem ipsum dolor sit.</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque veniam labore repellendus necessitatibus ipsa!</p>
-                              </div>
-                        </div>
-                  </div>
-            </div>
-      </div>
-
-      <script type="text/javascript">
+            </div><script type="text/javascript">
 
       TweenMax.to(".overlay h1", 2, {
             opacity: 0,
